--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "express": "^4.16.3"
   },
   "devDependencies": {
-    "express.js": "^1.0.0"
+    "express.js": "^1.0.0",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.2",
+    "karma-jasmine": "^1.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
