--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express.js": "^1.0.0",
     "jasmine-core": "^3.1.0",
     "karma": "^2.0.2",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-jasmine": "^1.1.2"
   },
   "scripts": {
