--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "An online implementation of Aeons Ends turnorder deck.",
   "main": "index.js",
-  "dependencies": {
-    "express": "^4.16.3"
-  },
   "devDependencies": {
+    "express": "^4.16.3",
     "express.js": "^1.0.0",
     "jasmine-core": "^3.1.0",
     "karma": "^2.0.2",
@@ -14,7 +12,7 @@
     "karma-jasmine": "^1.1.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/karma/bin/karma start"
   },
   "repository": {
     "type": "git",
@@ -25,5 +23,5 @@
   "bugs": {
     "url": "https://github.com/felixjensen/turnorder/issues"
   },
-  "homepage": "https://github.com/felixjensen/turnorder#readme"
+  "homepage": "https://felixjensen.github.io/turnorder"
 }
