--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "devDependencies": {
     "express": "^4.16.3",
     "express.js": "^1.0.0",
-    "jasmine-core": "^3.1.0",
-    "karma": "^2.0.2",
-    "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^1.1.2"
+    "jest": "^23.0.0"
   },
   "scripts": {
-    "test": "node_modules/karma/bin/karma start"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
