--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "jest": "^23.0.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "watch": "jest --watch",
+    "watchAll": "jest --watchAll"
   },
   "repository": {
     "type": "git",
