--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jest": "^23.0.0"
   },
   "scripts": {
+    "start": "node index.js",
     "test": "jest",
     "watch": "jest --watch",
     "watchAll": "jest --watchAll"
