--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "devDependencies": {
     "express": "^4.16.3",
     "express.js": "^1.0.0",
-    "jest": "^23.0.0"
+    "jest": "^23.0.0",
+    "prettier": "1.13.7"
   },
   "scripts": {
     "start": "node index.js",
